Add intro Paragraph

--- a/hello-world.html
+++ b/hello-world.html
@@ -1,1 +1,2 @@
 <h1> Hello, World!</h1>
+<P> Welcome to my first website! I am about to embark onthe execiting journey of learning how to code. Won't you join me?</p>
